initialized .travis.yml

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,11 @@
 ---
+oah_command: install
 drush_install_path: /usr/local/share/drush
 drush_path: /usr/local/bin/drush
-drush_version: master
+drush_version: "master"
 drush_keep_updated: no
 drush_force_update: no
+drush_force_composer_install: no
 
-# These options are the safest for avoiding GitHub API rate limits, but builds
-# can be sped up substantially by changing to --prefer-dist.
-drush_composer_cli_options: "--prefer-source --no-interaction"
+drush_composer_cli_options: "--prefer-dist --no-interaction"
+drush_clone_depth: 1
