--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,37 +1,17 @@
 ---
-- name: Clone Drush from GitHub.
-  git:
-    repo: https://github.com/drush-ops/drush.git
-    dest: "{{ drush_install_path }}"
-    version: "{{ drush_version }}"
-    update: "{{ drush_keep_updated }}"
-    force: "{{ drush_force_update }}"
-  register: drush_clone
+- include: tasks/oah-install.yml
+  when: oah_command == "install"
 
-- name: Check for composer.json
-  stat: path={{ drush_install_path }}/composer.json
-  register: drush_composer
+- include: tasks/oah-update.yml
+  when: oah_command == "update"
 
+- include: tasks/oah-remove.yml
+  when: oah_command == "remove"
 
-- name: Ensure Drush can be installed on Debian Wheezy.
-  shell: >
-    {{ composer_path }} update {{ drush_composer_cli_options }}
-    chdir={{ drush_install_path }}
-  when: drush_clone.changed and ansible_distribution == "Debian" and ansible_distribution_release == "wheezy" and drush_composer.stat.exists
+- include: tasks/oah-reset.yml
+  when: oah_command == "reset"
 
-- name: Install Drush dependencies with Composer.
-  shell: >
-    {{ composer_path }} install {{ drush_composer_cli_options }}
-    chdir={{ drush_install_path }}
-  when: drush_clone.changed and drush_composer.stat.exists
+- include: tasks/oah-validate.yml
+  when: oah_command == "validate"
 
-- name: Create drush symlink.
-  file:
-    src: "{{ drush_install_path }}/drush"
-    dest: "{{ drush_path }}"
-    state: link
-
-- name: Run drush to finish setting it up.
-  command: "{{ drush_path }}"
-  register: drush_result
-  changed_when: "'Execute a drush command' not in drush_result.stdout"
+#- include: tasks/oah-{{ oah_command }}.yml
